# gotokenizer-bin

./: .gitignore  Cargo.toml  README.md  build-win.bat  lib.rs  main.rs
examples/: main.go
gotokenizer/: gotokenizer.go  tokenizer_loader_linux.go  tokenizer_loader_windows.go
