[package]
name = "tokenizers-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = "0.13.3" 

[lib]
name = "c_tokenizers"
path = "lib.rs"
crate-type = ["cdylib"]


[[bin]]
name = "tokenizers-bin"
path = "main.rs"
 